rewrite controller tests